--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,3 +1,6 @@
-.navigation {
-  background-color: lightblue;
+.column {
+  display:inline-block;
+  width: 100%;
+  padding-left: 0px;
+  padding-top: 30px;
 }
