--- a/src/components/GeneralPages/AllPoliticians/AllPoliticians.scss
+++ b/src/components/GeneralPages/AllPoliticians/AllPoliticians.scss
@@ -1,44 +1,28 @@
 .main {
-  margin: 30px 100px 100px 100px;
+  margin: 5%;
 }
 
-.background {
-  background-color: white;
-  padding: 50px;
-}
 .image {
   float: left;
   margin-right: 20px;
-  margin-bottom: 20px;
 }
 .imageAndInfo {
   flex-direction: row;
-  margin-bottom: 70px;
-}
-
-.subjectImage img{
-  border-radius: 50%;
-}
-
-.about {
-  padding-top: 70px;
-  padding-bottom: 5px;
+  margin-bottom: 50px;
 }
 
 .infoBlock {
   width: 500px;
-  height: 40px;
-  background-color: lightgrey;
+  height: 50px;
   padding: 20px;
   overflow: hidden;
   margin-bottom: 10px;
-  border-radius: 7px;
 }
 
 .infoBlock img {
     margin-right: 15px;
     float: left;
-    border-radius: 0%
+    border-radius: 50%
 }
 
 .infoBlock h5,
@@ -46,4 +30,14 @@
     margin-left: 15px;
     display: block;
     margin: 2px 0 0 0;
+}
+
+.infoBlock p {
+  font-size: 12px;
+}
+
+.grayLine {
+  color: lightgray;
+  float: left;
+  width: 60%;
 }
