--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -44,3 +44,21 @@
 .billImage {
   border-radius: 0;
 }
+
+h4 {
+  font-family: Avenir;
+  font-weight: bold;
+}
+
+.title {
+  font-family: Avenir;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+.subtitle {
+  font-family: Avenir;
+  font-size: 20px;
+  line-height: 12px;
+  margin-top: 7px;
+}
