--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -43,3 +43,14 @@
     display: block;
     margin: 2px 0 0 0;
 }
+
+h3{
+  font-family: Avenir;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+h5 {
+  font-family: Avenir;
+  font-weight: bold;
+}
