--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,10 @@
 h1 {
-  font-family: 'Signika Negative', sans-serif;
+  font-family: Avenir;
   font-size: 50px;
 }
 
 h2 {
-  font-family: 'Signika Negative', sans-serif;
+  font-family: Avenir;
   font-size: 75px;
 }
 
@@ -14,7 +14,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+// code {
+//   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+//     monospace;
+// }
