--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -46,9 +46,11 @@
 
 h3{
   font-family: Avenir;
+  font-weight: bold;
   font-size: 35px;
 }
 
 h5 {
   font-family: Avenir;
+  font-weight: bold;
 }
