--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -47,10 +47,12 @@
 
 h4 {
   font-family: Avenir;
+  font-weight: bold;
 }
 
 .title {
   font-family: Avenir;
+  font-weight: bold;
   font-size: 35px;
 }
 
