--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -5,6 +5,7 @@
 
 .title {
   font-family: Avenir;
+  font-weight: bold;
   font-size: 35px;
 }
 
@@ -31,6 +32,7 @@
 
 .blockTitle { //"Relevant Bills"
   font-family: Avenir;
+  font-weight: bold;
   font-size: 20px;
 }
 
