--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -45,6 +45,10 @@
   border-radius: 0;
 }
 
+div .link {
+  text-decoration: none;
+}
+
 h4 {
   font-family: Avenir;
   font-weight: bold;
@@ -61,4 +65,5 @@ h4 {
   font-size: 20px;
   line-height: 12px;
   margin-top: 7px;
+
 }
