--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,12 @@
 .subheader {
-  font-family: 'Pacifico', cursive;
+  // font-family: 'Pacifico', cursive;
+  font-family: 'Lato', sans-serif;
   font-size: 30px;
-  color: #008080
+  color: #398eb2;
+}
+
+.header {
+   color: #000080;
+   font-family: 'Montserrat', sans-serif;
+   font-size: 60px;
 }
