--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -1,3 +1,7 @@
+.main {
+  margin: 50px;
+}
+
 // row 1-- img and
 .subjectImage img{
   border-radius: 50%;
@@ -12,13 +16,14 @@
 //for bills - row 2
 .infoBlock {
   width: 500px;
-  height: 100px;
-  background-color: lightgrey;
+  height: 90px;
+  background-color: #e9e9e9;
   padding: 20px;
   overflow: hidden;
   margin-bottom: 10px;
   border-radius: 7px;
 }
+
 .infoBlock:hover {
   background-color:#78C1CA;
   text-decoration: none;
@@ -34,6 +39,7 @@
   font-family: Avenir;
   font-weight: bold;
   font-size: 20px;
+  margin-left: 15px
 }
 
 .infoBlock h5 { //Bill Name
