fixed styling errors

--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -2,7 +2,7 @@
   margin: 50px;
 }
 
-// row 1-- img 
+// row 1-- img
 .politicianImage img{
   border-radius: 50%;
 }
@@ -52,7 +52,7 @@
 }
 div .link {
   text-decoration: none;
-
+}
 
 h3{
   font-family: Avenir;
