--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -1,32 +1,21 @@
-.main {
-  margin: 30px 100px 100px 100px;
-
+div .link {
+  text-decoration: none;
 }
 
-.background {
-  background-color: white;
-  padding: 50px;
+.blockTitle {
+  font-size: 15px;
 }
-
-.infoAndPicture {
-  display: inline-flex;
-}
-
-.billInfo {
-  margin-left: 50px;
-}
-
 .sponsorBlock {
   background-color: lightgrey;
   width: 600px;
   height: 100px;
   border-radius: 7px;
+  padding-left: 5px;
 }
 
-.sponsor{
-  padding-top: 2px;
+.sponsorBlock:hover {
+  background-color:#DD929D;
 }
-
 .contactInfo {
   font-size: 12px;
   line-height: 0.2em;
@@ -41,6 +30,11 @@
     height: 75px;
 }
 
-.billImage {
-  border-radius: 0;
+.subjectImage img{
+  border-radius: 50%;
+}
+
+.title {
+  font-family: 'Pacifico', cursive;
+  font-size: 35px;
 }
