--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -30,8 +30,9 @@
 }
 
 .blockTitle { //"Relevant Bills"
-  font-family: 'Pacifico', cursive, sans-serif;
-  font-size: 20px;
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 .infoBlock h5 { //Bill Name
