--- a/src/components/GeneralPages/AllSubjects/AllSubjects.scss
+++ b/src/components/GeneralPages/AllSubjects/AllSubjects.scss
@@ -1,43 +1,51 @@
-.main {
-  margin: 5%;
+// row 1-- img and
+.subjectImage img{
+  border-radius: 50%;
 }
 
-.image {
-  float: left;
-  margin-right: 20px;
-}
-.imageAndInfo {
-  flex-direction: row;
-  margin-bottom: 50px;
+.title {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
 }
 
+//for bills - row 2
 .infoBlock {
   width: 500px;
   height: 100px;
+  background-color: lightgrey;
   padding: 20px;
   overflow: hidden;
   margin-bottom: 10px;
+  border-radius: 7px;
+}
+.infoBlock:hover {
+  background-color:#DD929D;
+  text-decoration: none;
 }
 
-.infoBlock img {
+.infoBlock img { //bills icon
     margin-right: 15px;
     float: left;
-    border-radius: 50%
+    border-radius: 0%
+}
+
+.blockTitle { //"Relevant Bills"
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.infoBlock h5 { //Bill Name
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 20px;
 }
 
 .infoBlock h5,
-.infoBlock p{
+.infoBlock p{ //Name and subheader
     margin-left: 15px;
     display: block;
     margin: 2px 0 0 0;
 }
-
-.infoBlock p {
-  font-size: 12px;
-}
-
-.grayLine {
-  color: lightgray;
-  float: left;
-  width: 60%;
+div .link {
+  text-decoration: none;
 }
