--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -43,3 +43,12 @@
     display: block;
     margin: 2px 0 0 0;
 }
+.blockTitle {
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.title {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
+}
