--- a/src/components/GeneralPages/AllSubjects/AllSubjects.scss
+++ b/src/components/GeneralPages/AllSubjects/AllSubjects.scss
@@ -1,8 +1,10 @@
-.main {
-  margin: 5%;
+// row 1-- img and
+.subjectImage img{
+  border-radius: 50%;
 }
 
 .rows {
   margin-top: 20px;
   margin-bottom: 20px;
+
 }
