--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -50,6 +50,16 @@
     display: block;
     margin: 2px 0 0 0;
 }
+
+.blockTitle {
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.title {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
+
 div .link {
   text-decoration: none;
 }
@@ -63,4 +73,5 @@ h3{
 h5 {
   font-family: Avenir;
   font-weight: bold;
+
 }
