--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -25,6 +25,11 @@
 }
 
 .infoBlock:hover {
+  background-color:#DD929D;
+  text-decoration: none;
+}
+
+.infoBlock:hover {
   background-color:#78C1CA;
   text-decoration: none;
 }
