allchanges without bugs (#18)

--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -59,7 +59,7 @@
 .title {
   font-family: 'Pacifico', cursive;
   font-size: 40px;
-
+}
 div .link {
   text-decoration: none;
 }
@@ -73,5 +73,4 @@ h3{
 h5 {
   font-family: Avenir;
   font-weight: bold;
-
 }
