--- a/src/components/TweetSidebar/TweetStyle.css
+++ b/src/components/TweetSidebar/TweetStyle.css
@@ -1,14 +1,10 @@
 .twitter_block {
   float: right;
-  margin-right: 10px;
-  margin-top: 50px;
+  margin-right: 100px;
 }
-
-._twitter_block_de39e {
-    margin-right: 30px !important;
-}
-
 .twitter_timeline {
+  margin-top: 15px;
+  margin-bottom: 30px;
   border-style: solid;
   border-color:#D3D3D3;
   border-width: thin;
