--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -46,7 +46,7 @@
 }
 
 .blockTitle {
-  font-family: Avenir;
+  font-family: Avenir, sans-serif;
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 20px;
