--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,6 +6,6 @@
 
 .header {
    color: #000080;
-   font-family: 'Montserrat', sans-serif;
+   font-family: Avenir, sans-serif;
    font-size: 60px;
 }
