--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -6,7 +6,7 @@ div .link {
   font-size: 15px;
 }
 .sponsorBlock {
-  background-color: lightgrey;
+  background-color: #e9e9e9;
   width: 500px;
   height: 100px;
   border-radius: 7px;
@@ -14,7 +14,7 @@ div .link {
 }
 
 .sponsorBlock:hover {
-  background-color:#DD929D;
+  background-color: lightgray;
 }
 .contactInfo {
   font-size: 12px;
