--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -2,20 +2,19 @@
   margin: 50px;
 }
 
-// row 1-- img and
-.subjectImage img{
-  border-radius: 50%;
-}
-
 .title {
   font-family: Avenir;
   font-weight: bold;
   font-size: 35px;
 }
 
+.info {
+  margin-left: 20px;
+}
+
 //for bills - row 2
 .infoBlock {
-  width: 500px;
+  width: 450px;
   height: 90px;
   background-color: #e9e9e9;
   padding: 20px;
@@ -25,19 +24,8 @@
 }
 
 .infoBlock:hover {
-  background-color:#DD929D;
+  background-color:lightgray;
   text-decoration: none;
-}
-
-.infoBlock:hover {
-  background-color:#78C1CA;
-  text-decoration: none;
-}
-
-.infoBlock img { //bills icon
-    margin-right: 15px;
-    float: left;
-    border-radius: 0%
 }
 
 .blockTitle { //"Relevant Bills"
