--- a/src/components/GeneralPages/AllSubjects/AllSubjects.scss
+++ b/src/components/GeneralPages/AllSubjects/AllSubjects.scss
@@ -8,6 +8,17 @@
   margin-bottom: 20px;
 
 }
+.header {
+  font-family: 'Acme', sans-serif;
+  font-size: 40px;
+  color: #398eb2;
+}
+
+.subheader {
+  font-family: 'Signika Negative', sans-serif;
+  font-size: 20px;
+  color: 	#7789AA;
+}
 
 .img {
   height: 150px;
