--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,11 +1,11 @@
 .subheader {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Pacifico', cursive;;
   font-size: 30px;
   color: #398eb2;
 }
 
 .header {
    color: #000080;
-   font-family: Avenir, sans-serif;
-   font-size: 60px;
+   font-family: 'Acme', sans-serif;
+   font-size: 70px;
 }
