Final mihira changes (#30)
* made individual page for all bills with linking

* fixed picture issues, added function for full party name

* deleted AllBills folder

* final styling changes

--- a/src/components/GeneralPages/AllSubjects/AllSubjects.scss
+++ b/src/components/GeneralPages/AllSubjects/AllSubjects.scss
@@ -9,13 +9,13 @@
 
 }
 .header {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Avenir';
   font-size: 40px;
-  color: #398eb2;
+  color: black;
 }
 
 .subheader {
-  font-family: 'Signika Negative', sans-serif;
+  font-family: 'Avenir';
   font-size: 20px;
   color: 	#7789AA;
 }
