--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,11 +1,12 @@
 .subheader {
-  font-family: 'Pacifico', cursive;;
-  font-size: 30px;
+  font-family: 'Avenir';
+  font-size: 20px;
   color: #398eb2;
 }
 
 .header {
    color: #000080;
-   font-family: 'Acme', sans-serif;
-   font-size: 70px;
+   font-family: 'Avenir';
+   font-weight: bold;
+   font-size: 50px;
 }
