--- a/src/components/Politicians/PoliticianStyle.scss
+++ b/src/components/Politicians/PoliticianStyle.scss
@@ -36,15 +36,15 @@
 }
 
 .blockTitle {
-  font-family: Avenir, sans-serif;
-  font-weight: bold;
+  font-family: 'Avenir';
   font-size: 18px;
   margin-bottom: 20px;
 }
 
 .title {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Avenir';
   font-size: 40px;
+  font-weight: bold;
 }
 
 div .link {
@@ -52,14 +52,12 @@ div .link {
 }
 
 h3{
-  font-family: Avenir;
-  font-weight: bold;
+  font-family: 'Avenir';
   font-size: 35px;
 }
 
 h5 {
-  font-family: Avenir;
-  font-weight: bold;
+  font-family: 'Avenir';
 }
 
 .politicianImage img{
