--- a/src/components/Bills/BillStyle.scss
+++ b/src/components/Bills/BillStyle.scss
@@ -43,24 +43,19 @@ div .link {
 }
 
 h4 {
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-weight: bold;
 }
 
 .title {
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-weight: bold;
   font-size: 35px;
 }
 
 .subtitle {
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-size: 20px;
   line-height: 12px;
   margin-top: 7px;
-}
-
-.title {
-  font-family: 'Pacifico', cursive;
-  font-size: 35px;
 }
