--- a/src/components/GeneralPages/AllPoliticians/AllPoliticians.scss
+++ b/src/components/GeneralPages/AllPoliticians/AllPoliticians.scss
@@ -1,5 +1,6 @@
 .main {
-  margin: 5%;
+  font-family: 'Avenir';
+  margin-top: 20px;
 }
 
 .infoBlock {
@@ -13,7 +14,7 @@
 .politicianImg img {
   margin-right: 15px;
   float: left;
-  
+
 }
 
 .infoBlock h5,
@@ -35,5 +36,14 @@
 
 .link {
   text-decoration: none;
+}
 
+.header {
+  font-size: 40px;
+  color: black;
+}
+
+.subheader {
+  font-size: 20px;
+  color: 	#7789AA;
 }
