--- a/src/components/Subjects/SubjectStyle.scss
+++ b/src/components/Subjects/SubjectStyle.scss
@@ -3,7 +3,7 @@
 }
 
 .title {
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-weight: bold;
   font-size: 35px;
 }
@@ -29,14 +29,14 @@
 }
 
 .blockTitle { //"Relevant Bills"
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-weight: bold;
   font-size: 20px;
   margin-left: 15px
 }
 
 .infoBlock h5 { //Bill Name
-  font-family: Avenir;
+  font-family: 'Avenir';
   font-size: 20px;
 }
 
